[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/effect/explosion/explosion_effect_3.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/effect/explosion/explosion_effect_4.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/effect/explosion/explosion_effect_2.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/effect/explosion/explosion_effect_1.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/enemy/enemy_template.gd" type="Script" id=5]

[node name="EnemyTemplate" type="Area2D"]
script = ExtResource( 5 )
effect_list = [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ]

[node name="Texture" type="Sprite" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="Animation" type="AnimationPlayer" parent="."]

[node name="Notifier" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="on_area_entered"]
[connection signal="screen_exited" from="Notifier" to="." method="on_screen_exited"]
